# EDGE

./: compete_test.py  pyproject.toml  temp.py  test_api.py  test_qr.py  test_register.py  test_registered_user.py  test_validate_qr.py  test_verify_ser.py
backend/: app.py
backend/config/: settings.py
backend/routes/: qr.py  register.py  verify.py
backend/services/: db_service.py  face_service.py  validation_service.py
backend/utils/: image_utils.py  logger.py
infra/db/: schema.sql
logs/: decision_counts.json
ml/calibration/: threshold_tuning.ipynb
ml/evaluation/: metrics.py
